--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,25 @@
 
 <app-footer></app-footer>
 
+@if(welcome){
+<div
+    style="white-space: nowrap; overflow: hidden; height: 100vh; width: 100%; background-color: black; display: flex; justify-content: center; align-items: center; position: fixed; top:0px; left: 0px;">
+    <span class="falling-text">W</span>
+    <span class="falling-text">E</span>
+    <span class="falling-text">D</span>
+    <span class="falling-text">D</span>
+    <span class="falling-text">A</span>
+    <span class="falling-text">N</span>
+    <span class="falling-text">C</span>
+    <span class="falling-text">E</span>
+</div>
+<div>
+    <!-- <video>
+        <source src="/welcomeBlast.mp4">
+    </video> -->
+</div>
 
+}
 <!-- <div class="d-flex bg-dark"
     style="display: flex; height: 100vh; justify-content: center; align-items: center; flex-direction: column;">
     <img src="/logo.png" style="height: 200px;">
