--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -15,46 +15,46 @@
     </div>
     <div class="row my-3 mx-0">
 
-        <div class="col-4 mx-0 px-2">
+        <div class="col-lg-4 col-12 mx-0 px-2">
 
-            <img class="my-2 galleryItem" src="/1.JPG">
+            <img class="galleryItem rr" src="/1.JPG">
 
-            <img class="my-2 galleryItem" src="/2.JPG">
+            <img class="galleryItem rr" src="/2.JPG">
 
-            <img class="my-2 galleryItem" src="/3.JPG">
+            <img class="galleryItem rr" src="/3.JPG">
 
-            <img class="my-2 galleryItem" src="/9.PNG">
-            <img class="my-2 galleryItem" src="/10.JPG">
-            <img class="my-2 galleryItem" src="/11.JPG">
+            <img class="galleryItem rr" src="/9.PNG">
+            <img class="galleryItem rr" src="/10.JPG">
+            <img class="galleryItem rr" src="/11.JPG">
         </div>
 
-        <div class="col-4 mx-0 px-2">
-            <img class="my-2 galleryItem" src="/12.JPG">
+        <div class="col-lg-4 col-12 mx-0 px-2">
+            <img class="galleryItem rr" src="/12.JPG">
 
-            <img class="my-2 galleryItem" src="/4.JPG">
-
-
-            <img class="my-2 galleryItem" src="/5.JPG">
-
-            <img class="my-2 galleryItem" src="/6.PNG">
+            <img class="galleryItem rr" src="/4.JPG">
 
 
-            <img class="my-2 galleryItem" src="/13.JPG">
-            <img class="my-2 galleryItem" src="/14.AVIF">
+            <img class="galleryItem rr" src="/5.JPG">
+
+            <img class="galleryItem rr" src="/6.PNG">
+
+
+            <img class="galleryItem rr" src="/13.JPG">
+            <img class="galleryItem rr" src="/14.AVIF">
 
         </div>
 
 
-        <div class="col-4 mx-0 px-2">
-            <img class="my-2 galleryItem" src="/15.JPG">
-            <img class="my-2 galleryItem" src="/7.PNG">
+        <div class="col-lg-4 col-12 mx-0 px-2">
+            <img class="galleryItem rr" src="/15.JPG">
+            <img class="galleryItem rr" src="/7.PNG">
 
-            <img class="my-2 galleryItem" src="/8.PNG">
+            <img class="galleryItem rr" src="/8.PNG">
 
 
-            <img class="my-2 galleryItem" src="/16.JPG">
-            <img class="my-2 galleryItem" src="/17.JPG">
-            <img class="my-2 galleryItem" src="/18.JPG">
+            <img class="galleryItem rr" src="/16.JPG">
+            <img class="galleryItem rr" src="/17.JPG">
+            <img class="galleryItem rr" src="/18.JPG">
 
         </div>
     </div>
