--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,57 +1,65 @@
-.main{
-    background: url('https://images.unsplash.com/photo-1492684223066-81342ee5ff30?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    height: 100vh;
-    width: 100%;
-    background-position: bottom;
-    background-size: cover;
-    position: fixed;
-    z-index: -1;
+.welcomeText {
+  font-family: Montserrat;
+  letter-spacing: 4px;
+  font-size: 80px;
+}
+
+
+
+.main {
+  background: url('https://images.unsplash.com/photo-1492684223066-81342ee5ff30?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  height: 100vh;
+  width: 100%;
+  background-position: bottom;
+  background-size: cover;
+  position: fixed;
+  z-index: -1;
 }
 
 .mainImage {
-    background: url('https://images.unsplash.com/photo-1486611289333-50d2b3ac99d1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background: url('https://images.unsplash.com/photo-1486611289333-50d2b3ac99d1?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
 }
 
 .mainImage-in {
-    background-color: rgba(9, 1, 54, 0.575);
-    font-style: "serif";
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: WHite;
+  background-color: rgba(9, 1, 54, 0.575);
+  font-style: "serif";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: WHite;
 }
 
 .mainImage h1 {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 .mainImage h2 {
-    font-size: 25px;
-    text-align: center;
+  font-size: 25px;
+  text-align: center;
 }
 
 
 /* ABout US */
 
 .aboutUsImg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .aboutUsImg img {
-    height: 350px;
+  height: 350px;
 }
 
 .aboutUsText {
-    background-color: rgba(255, 255, 255, 0.575);
-    margin-left: -200px;
-    border: 1px solid 
+  background-color: rgba(255, 255, 255, 0.575);
+  margin-left: -200px;
+  border: 1px solid
     /* color:white; */
 }
 
@@ -60,44 +68,121 @@
 
 
 
+/* TEXT FALLING FROM TOP */
+@keyframes fall {
+  0% {
+    opacity: 0;
+    transform: translateY(-200%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+
+.falling-text {
+  display: inline-block;
+  /* Important for word-by-word animation */
+  animation: fall 1s ease-out forwards;
+  opacity: 0;
+  /* Initially hidden */
+  font-size: 100px;
+  color: #fceb8e;
+  font-family: Montserrat;
+  word-spacing: 8px;
+
+}
+
+/* Delay each word's animation */
+.falling-text:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.falling-text:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.falling-text:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.falling-text:nth-child(4) {
+  animation-delay: 0.8s;
+}
+
+.falling-text:nth-child(5) {
+  animation-delay: 1s;
+}
+
+.falling-text:nth-child(6) {
+  animation-delay: 1.2s;
+}
+
+.falling-text:nth-child(7) {
+  animation-delay: 1.4s;
+}
+
+.falling-text:nth-child(8) {
+  animation-delay: 1.6s;
+}
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 900px) {
 
-    .aboutUsImg img {
-        height: 260px;
-    }
+  .aboutUsImg img {
+    height: 260px;
+  }
 
-    .aboutUsImg {
-        margin: auto;
-    }
+  .aboutUsImg {
+    margin: auto;
+  }
 
-    .aboutUsText {
-        margin-left: -120px;
-        /* margin: auto; */
-    }
+  .aboutUsText {
+    margin-left: -120px;
+    /* margin: auto; */
+  }
 }
 
 
 
 
 @media screen and (max-width: 480px) {
-    .mainImage h1 {
-        font-size: 25px;
-    }
+  .mainImage h1 {
+    font-size: 25px;
+  }
 
-    .mainImage h2 {
-        font-size: 15px;
-        text-align: center;
-    }
+  .mainImage h2 {
+    font-size: 15px;
+    text-align: center;
+  }
 
-    .aboutUsImg img {
-        height: 230px;
-    }
+  .aboutUsImg img {
+    height: 230px;
+  }
 
-    .aboutUsText {
-        margin-left: 0px;
-        margin: auto;
-    }
+  .aboutUsText {
+    margin-left: 0px;
+    margin: auto;
+  }
 
+  .falling-text {
+
+    font-size: 50px;
+
+  }
 
 
 }
+
+
+/* Add more nth-child rules as needed for more words */
