--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,8 +2,8 @@
 <app-spinner></app-spinner>
 }
 
-<div class="main py-4" style="display: flex; justify-content: center; align-items: center;">
-    <div class="contactForm col-lg-4 col-md-6 col-11 mx-auto pb-5 px-3 my-5 mb-5">
+<div class="main py-5" style="display: flex; justify-content: center; align-items: center;">
+    <div class="contactForm col-lg-4 col-md-6 col-11 mx-auto pb-5 px-3 my-5">
 
 
         <h1 class="text-end mx-2 contactFormHeading mb-4 px-3 mt-3">Contact</h1>
