--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -2,7 +2,72 @@
     width: 100%;
     /* height: 30%; */
     cursor: pointer;
+    animation-name: galleryItem;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
+
+.rr{
+    animation-name: rr;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rr {
+    33%{
+        /* margin-top: -500%; */
+        width: 100%;
+    }66%{
+        /* margin-left: 0px; */
+        width: 99%;
+    }100%{
+        width: 100%;
+    }
+}
+
+@keyframes galleryItem {
+    from{
+        margin-top: -500%;
+        width: 90%;
+    }to{
+        /* margin-left: 0px; */
+        width: 100%;
+    }
+}
+
+/* .galleryItemLeft{
+    animation-name: galleryItemLeft;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+.galleryItemRight{
+    animation-name: galleryItemRight;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+} */
+
+/* @keyframes galleryItemLeft {
+
+    from {
+        margin-left: -100%;
+    }to{
+        
+    }
+    
+}
+
+@keyframes galleryItemRight {
+
+    from {
+        margin-right: 100%;
+    }to{
+        
+    }
+    
+} */
 
 .menu{
     display: flex;
