--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,29 @@
 @if(spinner){
-  <app-spinner></app-spinner>
+<app-spinner></app-spinner>
+}
+
+
+
+
+<!-- SERVICE DETAIL -->
+
+@if(servicePopup){
+<div class="service-details row" (click)="closePopup()">
+  <div class="detail-text bg-black col-lg-5 col-md-6 col-11 p-4 pt-0" style="border-radius: 20px;">
+    <section>
+      <h1 class="text-shadow text-white mb-4 popupHead" style="border-bottom: 2px solid white;"><u>{{this.head}}</u>
+      </h1>
+    </section>
+    <span class="text-white" style="font-size: 18px; letter-spacing: 1px;">
+      {{this.content1}}<br><br>
+
+      {{this.content2}}<br><br>
+      You can contact us further queries to bring a lot of joy and happiness to your wedding!"
+
+    </span><br>
+    <!-- <button class="btn mt-3 mx-auto" style="background-color: #fceb8e;"><b>Connect Now</b></button> -->
+  </div>
+</div>
 }
 
 <div class="main"></div>
@@ -40,9 +64,9 @@
       <!-- <button (click)="post()">dasd</button>  -->
 
       <!-- <input type="file" (change)="handleUpload($event)">
-
-      <input type="file" (change)="onFileSelected($event)" class="form-control" />
-      <button (click)="downloadBase64()">sdh</button> -->
+  
+        <input type="file" (change)="onFileSelected($event)" class="form-control" />
+        <button (click)="downloadBase64()">sdh</button> -->
 
       <button type="submit" class="btn btn-primary" (click)="saveData()">Submit</button>
     </form>
@@ -78,11 +102,14 @@
 <div class="container-fluid">
   <div class="row mainImage">
     <div class="mainImage-in p-0">
-      <div class="col-lg-12 col-md-12 col-12 w-100 py-2"
-        style="background-color: rgba(0, 0, 0, 0.582); border-radius: 20px;">
-        <h1 class="text-center">Celebrate Your Special Moments with Dance</h1>
-        <h2 class="text-center">Grace, Energy, and Joy in Every Step! </h2>
-        <div class="text-center"><button class="btn btn-success explorebtn" (click)="letsConnect('open')">Join Now</button></div>
+      <div class="col-lg-12 col-md-12 col-12 w-100 py-2" style="background-color: rgba(0, 0, 0, 0.582);">
+        <div class="mainImageText">
+          <h1 class="text-center">Celebrate Your Special Moments with Dance</h1>
+          <h2 class="text-center">Grace, Energy, and Joy in Every Step! </h2>
+          <div class="text-center"><button class="btn btn-success explorebtn" (click)="letsConnect('open')">Connect
+              Now</button></div>
+
+        </div>
       </div>
     </div>
   </div>
@@ -90,50 +117,60 @@
 
   <!-- Services -->
   <div class="row mt-5">
-    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
-      <div class="mx-5 bg-white serviceItem pt-3">
+    <div class="col-lg-3 col-md-6 col-12 my-2">
+      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)">
         <img style="height: 180px;" src="https://cdn-icons-png.flaticon.com/512/40/40203.png">
-        <span class="my-2">⁠Couple Dance</span>
+        <section>
+          <h1 class="text-shadow my-3">Couple Dance</h1>
+        </section>
       </div>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
-      <div class="mx-5 bg-white serviceItem pt-3">
+    <div class="col-lg-3 col-md-6 col-12 my-2">
+      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)">
         <img style="height: 180px;" src="https://cdn0.iconfinder.com/data/icons/party-human-1/66/29-512.png">
-        <span class="my-2">Group Dance</span>
+
+        <section>
+          <h1 class="text-shadow my-3">Group Dance</h1>
+        </section>
       </div>
     </div>
 
 
-    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
-      <div class="mx-5 bg-white serviceItem pt-3">
+    <div class="col-lg-3 col-md-6 col-12 my-2">
+      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)">
         <img style="height: 180px;"
           src="https://images.vexels.com/media/users/3/236440/isolated/preview/5cff4483ed2d0027d2512e2b29c227c3-girl-in-long-dress-silhouette.png">
-        <span class="my-2">Ladies Sangeet </span>
+        <section>
+          <h1 class="text-shadow my-3">Ladies Sangeet</h1>
+        </section>
       </div>
     </div>
 
 
-    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
-      <div class="mx-5 bg-white serviceItem pt-3">
+    <div class="col-lg-3 col-md-6 col-12 my-2">
+      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)">
         <img style="height: 180px;" src="https://logolook.net/wp-content/uploads/2023/12/Michael-Jackson-logo.png">
-        <span class="my-2">⁠Couple Dance</span>
+        <section>
+          <h1 class="text-shadow my-3">Solo Dance</h1>
+        </section>
       </div>
     </div>
   </div>
 
 
+
+
   <!-- About Us -->
-
-
-  <div class="row aboutUs mt-5 bg-dark py-5 reveal" style="box-shadow: 0px 0px 7px 7px black;">
-    <div class="col-lg-6 col-md-6 col-12 aboutUsImg">
+  <div class="row aboutUs mt-5 bg-dark py-5" style="box-shadow: 0px 0px 7px 7px black;">
+    <div class="col-lg-6 col-md-6 col-12 aboutUsImg reveal">
       <img src="/aboutus.JPG">
     </div>
 
-    <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto">
+    <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto reveal">
       <h2>About Us!</h2>
-      <span class="text-center" style="text-align: justify; font-weight: 500;">A premier wedding choreography company
+      <span class="text-center" style="font-size: 17px; text-align: justify; font-weight: 500;">A premier wedding
+        choreography company
         renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a
         knack for creating memorable moments, Raj has brought joy to countless couples and their families through
         expertly crafted choreography that reflects their unique love stories. His innovative approach combines
@@ -146,8 +183,10 @@
 
   <!-- OUR GALLERY -->
 
-  <div class="row py-4 reveal" style="background-color: rgba(0, 0, 0, 0.274);">
-    <h1 class="text-center text-white">Our Gallery</h1>
+  <div class="row py-4" style="background-color: rgba(0, 0, 0, 0.274);">
+    <div class="breathe-animation my-2 text-center">
+      <span class="gallery-head" style="color: rgb(255, 255, 255);">Gallery</span>
+    </div>
     <div class="galleryMain" style="overflow-x: scroll;">
       <div class="col-12 gallery my-0 py-5 d-flex">
 
@@ -200,21 +239,37 @@
 
   <!-- BIOGRAHY -->
   <div class="row biography bg-dark py-3 reveal" style="box-shadow: 0px 0px 7px 7px black;">
-    <h1 class="text-center text-white">Biography</h1>
+    <div class="breathe-animation my-2 text-center">
+      <span class="bioheading" style="color: rgb(255, 255, 255);">Biography</span>
+    </div>
     <div class="col-lg-6 col-md-6 col-12 aboutUsImg my-4">
-      <img style="" class="mx-auto" src="/logo.png">
+      <img class="mx-auto" src="/logo.png">
     </div>
     <div class="col-lg-6 col-md-6 col-12 my-4">
       <div class="text-white mx-auto" style="text-align: justify;">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates est modi consequuntur, nemo, nihil
-        asperiores quas officiis labore atque corrupti voluptatem cumque iure dolorum maxime? Eaque, aspernatur
-        provident cumque sequi quasi, dolorem vel molestias distinctio assumenda sunt, fuga repellendus laborum
-        inventore neque. Ullam cum quaerat distinctio aspernatur eaque id cupiditate ex necessitatibus possimus nemo,
-        aliquid explicabo incidunt iusto nisi est blanditiis delectus error temporibus odit facere itaque sequi
-        voluptatem quis a. Deleniti expedita repudiandae architecto! Tempore minus recusandae nemo unde sapiente nam
-        nulla omnis, quisquam non voluptas quasi officiis ab culpa autem velit delectus fuga architecto nesciunt ipsa
-        vitae necessitatibus quo pariatur assumenda. Repellat consectetur voluptatum adipisci optio in. Omnis quis quia
-        tenetur saepe vitae. Mollitia fugit, maxime vitae cum nihil.
+        The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
+        dance for your once-in-a-lifetime!<br><br>
+        We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
+        special father daughter dance , the bride & groom entry or even solo performances - our wedding dance
+        choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
+        These are some of the perks you can expect:
+        <ul style="font-size: medium;">
+          <li>Detailed Consultation for thematic choreography and audience experience
+          </li>
+          <li>Detailed Consultation for thematic choreography and audience experience
+          </li>
+          <li>Instructors come with relevant experience of a Professional DanceSport background
+          </li>
+          <li>Song Editing provided to create maximum impact
+          </li>
+          <li>Flexible Timing for Lessons</li>
+          <li>Private Sessions With Instructors
+          </li>
+          <li>Proven track record - see results in just 4 sessions!
+          </li>
+        </ul>
+        Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
+
       </div>
     </div>
   </div>
