--- a/src/app/components/packages/packages.component.css
+++ b/src/app/components/packages/packages.component.css
@@ -6,3 +6,223 @@
 span {
     /* font-family: "Times new roman condensed"; */
 }
+
+section {
+    font-size: 19px;
+}
+
+
+/* JOIN FORM */
+.joinUsForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.906);
+}
+
+.myForm {
+    background-color: rgba(255, 255, 255, 0.854);
+    border-radius: 20px;
+}
+
+
+
+
+/* FILLED POPUP */
+
+.filled {
+    display: flex;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    top: 0px;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.699);
+    z-index: 5;
+}
+
+.filled-in {
+    height: 250px;
+    width: 350px;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    text-align: center;
+    top: 200px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.filled-in img {
+    height: 100px;
+    width: 100px;
+}
+
+
+
+/* PACKAGE ANIMATION */
+.packageCompo1 {
+    animation-name: package1;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+.packageCompo2 {
+    animation-name: package2;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    /* animation-delay: 0.4s; */
+}
+
+.packageCompo3 {
+    animation-name: package3;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    /* animation-delay: 0.4s; */
+}
+
+
+.packageCompo4 {
+    animation-name: package4;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    /* animation-delay: 0.4s; */
+}
+
+
+.packageHeading {
+    animation-name: packageheading;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    /* animation-delay: 2s; */
+}
+
+@keyframes package1 {
+    0% {
+        margin-top: -400%;
+    }
+
+    20% {}
+
+    40% {}
+
+    60% {}
+
+    80% {}
+
+    100% {}
+
+}
+
+@keyframes package2 {
+    0% {
+        margin-top: -400%;
+    }
+
+    20% {
+        margin-top: -400%;
+    }
+
+    30%{
+
+        margin-top: -400%;
+    }
+    40% {
+    }
+
+    60% {}
+
+    80% {}
+
+    100% {}
+
+}
+
+
+@keyframes package3 {
+    0% {
+        margin-top: -400%;
+    }
+
+    20% {
+        margin-top: -400%;
+    }
+
+    40% {
+        margin-top: -400%;
+    }
+
+    60% {
+        margin-top: -400%;
+
+    }
+
+    80% {
+
+    }
+
+    100% {}
+
+}
+
+@keyframes package4 {
+    0% {
+        margin-top: -400%;
+    }
+
+    20% {
+        margin-top: -400%;
+    }
+
+    40% {
+        margin-top: -400%;
+    }
+
+    60% {
+        margin-top: -400%;
+
+    }
+
+    80% {
+        margin-top: -400%;
+
+    }
+
+    100% {}
+
+}
+
+
+@keyframes packageheading {
+    0% {
+        opacity: 0;
+    }
+
+    25% {
+        opacity: 0;
+    }
+
+    75% {
+        opacity: 0.4;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
+
+
+@media screen and (max-width: 480px) {
+    section {
+        font-size: 20px;
+    }
+}
