--- a/src/app/components/services/services.component.css
+++ b/src/app/components/services/services.component.css
@@ -16,6 +16,22 @@
     color: black;
 }
 
+
+.headings {
+    animation-name: headings;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes headings {
+    from {
+        margin-left: -200%;
+    }
+
+    to {}
+}
+
+
 .mainContent {
     font-size: 20px;
     color: black;
@@ -24,6 +40,12 @@
 .mainImg {
     height: 400px;
 }
+
+.breathe-animation span {
+    font-size: clamp(3vw, 1vw, 1vh);
+}
+
+
 
 
 /* SERVICES */
@@ -118,15 +140,19 @@
     justify-content: end;
 }
 
- .servic button{
+.servic button {
     display: none;
 }
 
-/*
+.servic:hover {
+    border: 4px solid white;
+}
 
-.servic:hover button{
+
+
+.servic:hover button {
     display: block;
-} */
+}
 
 .servictext {
     background-color: #0000009c;
@@ -139,13 +165,16 @@
 
 /* SERVICE DETAIL */
 
-.service-details{
-    background-color: rgba(0, 0, 0, 0.534);
+.service-details {
+    background-color: rgba(0, 0, 0, 0.701);
     position: fixed;
     top: 0px;
     width: 100%;
     height: 100vh;
     left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -164,6 +193,13 @@
         height: 100%
     }
 
+    .breathe-animation span {
+        font-size: clamp(6vw, 1vw, 1vh);
+    }
 
+    section span {
+        color: white;
+        border: 2px solid white;
+    }
 
 }
