--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,3 +1,8 @@
 <div class="preloader">
     <img src="/preloader-unscreen.gif">
 </div>
+
+<!-- 
+<body class="breathe-animation">
+    <span style="color: red; font-size: clamp(3vw, 3vw, 3vh);">Bikes</span>
+</body> -->
