--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,133 @@
+/* TEXT SHADOW 2 */
+
+@import url("https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@400;600;700&display=swap");
+
+
+/* $blue: #2962ff; */
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	/* font-family: "Alumni Sans", sans-serif; */
+	font-size: 16px;
+}
+
+section {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	/* min-height: 100vh; */
+	/* background: #212121; */
+	color: #090909;
+	text-transform: uppercase;
+	gap: 30px;
+}
+
+h1 {
+	font-size: 2.5em;
+	/* text-decoration: underline; */
+	@media (max-width: 768px) {
+		font-size: 1.3em;
+	}
+}
+
+.text-shadow {
+	font-style: italic;
+	text-transform: uppercase;
+	color: transparent;
+	-webkit-text-stroke: #000000;
+	-webkit-text-stroke-width: 1px;
+	text-shadow: 2px 2px 10px #fceb8e;
+	transition: all 0.5s ease-in-out;
+	text-align: center;
+	letter-spacing: 0.2em;
+	animation: flicker 0.5s ease-in-out infinite alternate;
+
+	&:hover {
+		color: #000000;
+	}
+}
+
+.tags small {
+	@media (max-width: 768px) {
+		font-size: 0.5em;
+	}
+}
+
+@keyframes flicker {
+	0% {
+		opacity: 0.5;
+		text-shadow: 2px 2px 10px #fceb8e;;
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 2px 2px 20px #fceb8e;;
+	}
+}
+
+
+
+
+
 /* You can add global styles to this file, and also import other style files */
-.reveal{
-    position: relative;
-    transform: translateY(150px);
-    opacity: 0;
-    transition: all 1s ease;
-  }
-  
-  .reveal.active{
-    transform: translateY(0px);
-    opacity: 1;
-  }
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal.active {
+  transform: translateY(0px);
+  opacity: 1;
+}
+
+
+
+/* REVEAL Up*/
+.reveal-data-up {
+  position: relative;
+  transform: translatey(-150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal-data-up.active {
+  transform: translatey(0px);
+  opacity: 1;
+}
+
+
+/* REVEAL LEFT */
+
+.reveal-data-left {
+  position: relative;
+  transform: translatex(-150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal-data-left.active {
+  transform: translatex(0px);
+  opacity: 1;
+}
+
+
+/* REVEAL RIGHT */
+
+.reveal-data-right {
+  position: relative;
+  transform: translatex(150px);
+  opacity: 0;
+  transition: all 1s ease;
+}
+
+.reveal-data-right.active {
+  transform: translatex(0px);
+  opacity: 1;
+}
