--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,30 @@
 
 <app-footer></app-footer>
 
-@if(welcome){
-<div
-    style="white-space: nowrap; overflow: hidden; height: 100vh; width: 100%; background-color: black; display: flex; justify-content: center; align-items: center; position: fixed; top:0px; left: 0px;">
-    <span class="falling-text">W</span>
-    <span class="falling-text">E</span>
-    <span class="falling-text">D</span>
-    <span class="falling-text">D</span>
-    <span class="falling-text">A</span>
-    <span class="falling-text">N</span>
-    <span class="falling-text">C</span>
-    <span class="falling-text">E</span>
+
+<!-- WHATSAPP ICON -->
+<div class="container w-25" class="whatsapp">
+    <a href="https://wa.me/919911587963" target="_blank"><img
+            src="https://i.pinimg.com/originals/43/08/82/430882b2a9c08ee91f4259ba040cc577.png" class="imgIcon"></a>
+</div>
+
+
+
+
+<div>
+    <div class="welcomee">
+        <!-- <div class="otherone bg-green">
+        </div> -->
+        <span></span>
+        <span class="falling-text">W</span>
+        <span class="falling-text">E</span>
+        <span class="falling-text">D</span>
+        <span class="falling-text">D</span>
+        <span class="falling-text">A</span>
+        <span class="falling-text">N</span>
+        <span class="falling-text">C</span>
+        <span class="falling-text">E</span>
+    </div>
 </div>
 <div>
     <!-- <video>
@@ -22,7 +35,6 @@
     </video> -->
 </div>
 
-}
 <!-- <div class="d-flex bg-dark"
     style="display: flex; height: 100vh; justify-content: center; align-items: center; flex-direction: column;">
     <img src="/logo.png" style="height: 200px;">
