--- a/src/app/auth/admin/admin.component.html
+++ b/src/app/auth/admin/admin.component.html
@@ -1,1 +1,41 @@
-<p>admin works!</p>
+
+
+<div class="container-fluid bg-dark border py-0">
+
+<div class="row">
+  <div class="col-lg-3 col-md-4 col-12 my-5 adminItems">
+    <div (click)="routee('Enquiry')" class="bg-white px-3" style="display: flex; cursor: pointer; flex-direction: column; align-items: center; border-radius: 20px;">
+      <img src="https://idealtecoman.com/assets/images/customer.gif">
+      <span class="my-2">Enquiry</span>
+    </div>
+  </div>
+
+
+  <div class="col-lg-3 col-md-4 col-12 my-5 adminItems">
+    <div (click)="routee('Contact')" class="bg-white px-3" style="display: flex; cursor: pointer; flex-direction: column; align-items: center; border-radius: 20px;">
+      <img src="https://cdn.pixabay.com/animation/2023/04/14/09/45/09-45-44-954_512.gif">
+      <span class="my-2">Contact</span>
+    </div>
+  </div>
+
+
+  <div class="col-lg-3 col-md-4 col-12 my-5 adminItems">
+    <div (click)="routee('Carrers')" class="bg-white px-3" style="display: flex; cursor: pointer; flex-direction: column; align-items: center; border-radius: 20px;">
+      <img src="https://www.buddingleafinfra.com/images/careers.gif">
+      <span class="my-2">Careers</span>
+    </div>
+  </div>
+
+
+  <div class="col-lg-3 col-md-4 col-12 my-5 adminItems">
+    <div (click)="routee('Package')" class="bg-white px-3" style="display: flex; cursor: pointer; flex-direction: column; align-items: center; border-radius: 20px;">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkCvoFpPyoGQyWUmKbiO9JBmKX_e3D8sXb5A&s">
+      <span class="my-2">Package</span>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex justify-content-end mx-4 my-2">
+<div>  <button (click)="logOut()" class="btn btn-danger">Logout</button></div>
+</div>
+</div>
