--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -99,6 +99,8 @@
 </div>
 }
 
+
+
 <div class="container-fluid">
   <div class="row mainImage">
     <div class="mainImage-in p-0">
@@ -118,7 +120,8 @@
   <!-- Services -->
   <div class="row mt-5">
     <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)">
+      <div class="mx-5 bg-white serviceItem"
+        (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)">
         <img style="height: 180px;" src="https://cdn-icons-png.flaticon.com/512/40/40203.png">
         <section>
           <h1 class="text-shadow my-3">Couple Dance</h1>
@@ -127,7 +130,8 @@
     </div>
 
     <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)">
+      <div class="mx-5 bg-white serviceItem"
+        (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)">
         <img style="height: 180px;" src="https://cdn0.iconfinder.com/data/icons/party-human-1/66/29-512.png">
 
         <section>
@@ -138,7 +142,8 @@
 
 
     <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)">
+      <div class="mx-5 bg-white serviceItem"
+        (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)">
         <img style="height: 180px;"
           src="https://images.vexels.com/media/users/3/236440/isolated/preview/5cff4483ed2d0027d2512e2b29c227c3-girl-in-long-dress-silhouette.png">
         <section>
@@ -149,7 +154,8 @@
 
 
     <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem" (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)">
+      <div class="mx-5 bg-white serviceItem"
+        (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)">
         <img style="height: 180px;" src="https://logolook.net/wp-content/uploads/2023/12/Michael-Jackson-logo.png">
         <section>
           <h1 class="text-shadow my-3">Solo Dance</h1>
@@ -250,24 +256,22 @@
         The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
         dance for your once-in-a-lifetime!<br><br>
         We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
-        special father daughter dance , the bride & groom entry or even solo performances - our wedding dance
+        special father daughter dance, the bride & groom entry or even solo performances - our wedding dance
         choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
-        These are some of the perks you can expect:
-        <ul style="font-size: medium;">
-          <li>Detailed Consultation for thematic choreography and audience experience
-          </li>
-          <li>Detailed Consultation for thematic choreography and audience experience
-          </li>
-          <li>Instructors come with relevant experience of a Professional DanceSport background
-          </li>
-          <li>Song Editing provided to create maximum impact
-          </li>
-          <li>Flexible Timing for Lessons</li>
-          <li>Private Sessions With Instructors
-          </li>
-          <li>Proven track record - see results in just 4 sessions!
-          </li>
-        </ul>
+
+        These are some of the perks you can expect:<br><br>
+        <span class="my-2">=> Detailed Consultation for thematic choreography and audience experience
+        </span><br>
+        <span class="my-2">=> Instructors come with relevant experience of a Professional DanceSport background
+        </span><br>
+        <span class="my-2">=> Song Editing provided to create maximum impact
+        </span><br>
+        <span class="my-2">=> Flexible Timing for Lessons</span><br>
+        <span class="my-2">=> Private Sessions With Instructors
+        </span><br>
+        <span class="my-2">=> Proven track record - see results in just 4 sessions!
+        </span><br>
+
         Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
 
       </div>
