--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="col-lg-4 col-md-4 col-12" style="display: flex; justify-content: start; align-items: center;">
-         <img class="mainImg" src="https://www.pngall.com/wp-content/uploads/2/Dance-PNG-Picture.png">
+         <img class="mainImg" src="/Dance-PNG-Picture.png">
       </div>
    </div>
 
