--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -3,8 +3,8 @@
   justify-content:center ;
   height: 97vh;
   width: 100%;
-  align-items: center ;
-  background-color: black
+  align-items: start;
+  background-color: black;
 }
 
 .authForm{
