--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,69 @@
-<p>login works!</p>
+@if(spinner){
+<app-spinner></app-spinner>
+}
+
+
+<div class="auth">
+  @if(!password){
+  <div class="authForm py-3 px-3 my-0 mt-4">
+    <h2 class="text-center">Login</h2>
+    <form [formGroup]="myForm">
+      <div class="form-group my-4">
+        <label for="exampleInputPassword1"><span>Enter Username</span></label>
+        <input type="text" class="form-control my-2" formControlName="username" id="exampleInputPassword1"
+          placeholder="Username">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+          else.</small>
+      </div>
+
+      <div class="form-group my-4">
+        <label for="exampleInputPassword1"><span>Enter Password</span></label>
+        <input type="password" class="form-control my-2" formControlName="password" id="exampleInputPassword1"
+          placeholder="Password">
+      </div>
+
+      <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
+
+      <div><a style="color: blue; cursor: pointer;" (click)="changePassword('change')">Change Password?</a></div>
+    </form>
+  </div>
+  }
+
+
+
+
+
+  <!-- CHANGE PASSWORD -->
+
+  @if(password){
+  <div class="authForm py-3 px-3 my-0 mt-4">
+    <h2 class="text-center">Change Password</h2>
+    <form [formGroup]="passwordForm">
+      <div class="form-group my-4">
+        <label for="exampleInputPassword1"><span>Enter Username</span></label>
+        <input type="text" class="form-control my-2" formControlName="username" id="exampleInputPassword1"
+          placeholder="Username">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+          else.</small>
+      </div>
+
+      <div class="form-group my-4">
+        <label for="exampleInputPassword1"><span>Enter Old Password</span></label>
+        <input type="password" class="form-control my-2" formControlName="oldpassword" id="exampleInputPassword1"
+          placeholder="Password">
+      </div>
+
+      <div class="form-group my-4">
+        <label for="exampleInputPassword1"><span>Enter New Password</span></label>
+        <input type="password" class="form-control my-2" formControlName="newPassword" id="exampleInputPassword1"
+          placeholder="Password">
+      </div>
+
+      <button type="submit" class="btn btn-primary" (click)="login()">Change Password</button>
+
+      <div><a style="color: blue; cursor: pointer;" (click)="changePassword('')">Go Back</a></div>
+    </form>
+  </div>
+  }
+
+</div>
