--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,20 +1,20 @@
 <div class="auth">
-  <div class="authForm py-3 px-3 my-0">
-      <h2 class="text-center">Register</h2>
-      <form [formGroup]="myForm">
-          <div class="form-group my-4">
-              <label for="exampleInputPassword1"><span>Enter Username</span></label>
-              <input type="text" class="form-control" formControlName="username" id="exampleInputPassword1" placeholder="username">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                  else.</small>
-          </div>
+    <div class="authForm py-5 px-3 my-0">
+        <h2 class="text-center">Register</h2>
+        <form [formGroup]="myForm">
+            <div class="form-group">
+                <label for="exampleInputPassword1"><span>Enter Username</span></label>
+                <input type="text" class="form-control" formControlName="username" id="exampleInputPassword1" placeholder="username">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
 
-          <div class="form-group my-4">
-              <label for="exampleInputPassword1"><span>Enter Password</span></label>
-              <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1" placeholder="Number">
-          </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1"><span>Enter Password</span></label>
+                <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1" placeholder="Number">
+            </div>
 
-          <button type="submit" class="btn btn-primary" (click)="auth()">Submit</button>
-      </form>
-  </div>
+            <button type="submit" class="btn btn-primary" (click)="auth()">Submit</button>
+        </form>
+    </div>
 </div>
